--- a/index.css
+++ b/index.css
@@ -116,3 +116,33 @@ footer.footer {
 .mobile-save-button {
     margin-bottom: var(--bulma-content-block-margin-bottom);
 }
+
+.color-picker button {
+    width: 22px;
+    height: 22px;
+    left: 5px;
+    right: auto;
+    border-radius: 5px;
+}
+
+.color-picker input {
+    width: 150px;
+    height: 32px;
+    padding: 0 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    box-sizing: border-box;
+
+    padding-left: 36px;
+}
+
+.color-picker {
+    display: none;
+}
+
+.color-picker.is-shown {
+    display: block;
+}
